* TPM encoded VMK ?
* VMK date time - change password on USB encrypted drive
* what is entry type 0x000b ?
* why does windows hide the last 4096 bytes of the volume?

Test images:
* for Windows Vista, Windows 7, To Go
* start up key
* external key
* password

Validate test cases:
* AES 128
* AES 128 diffuser
* AES 256
* AES 256 diffuser
* recovery key
* clear key
* partial encrypted volume

20110826
* worked on support for partial encrypted volumes

20110825
* worked on clear key support
* worked on support for partial encrypted volumes

20110824
* worked on Vista support

20110823
* updated libbfio, libfvalue

20110822
* remove seek end volume size detection to rely on metadata
* small changes to configure for fuse

20110821
* worked on handling metadata blocks
  - fix for BitLocker To Go
* fix for openssl EVP
* updated libhmac
* code clean up
* added codepage
* bdemount now daemonizes
* improved libfuse detection by configure
* worked on manuals
* open now distinguishes between failure and invalid keys
* the library no longer stores the binary recovery key but its SHA256 hash
* worked on password support
* updated msvscpp build files
* worked on WINAPI build

20110819
* worked on handling metadata blocks

20110818
* updated libbfio
* code clean up
* added msvscpp build files
* worked on WINAPI build

20110817
* worked on fuse mount

20110816
* updated libbfio
* worked on fuse mount

20110812
* worked on fuse mount

20110811
* worked on libbfio file range IO handle for bdemount
* libbfio code clean up
* added info handle

20110810
* worked on encryption functions

20110807
* worked on AES functions

20110806
* updated libhmac - bug fixes for Solaris
* updated libsystem, libfvalue, 
* created work around for openssl EVP issues
  - currently ignoring the output of Final function
* cleaned up some TODOs

20110805
* worked on reading sector data
* worked on BitLocker ToGo support

20110804
* worked on reading sector data

20110803